navbar and header for bukidnon

--- a/index.html
+++ b/index.html
@@ -1,126 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Bukidnon - The Highland Paradise</title>
+    <title>Bukidnon</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <!-- Navbar -->
-    <nav class="navbar">
-      <div class="logo">
-        <h1>Bukidnon</h1>
-      </div>
-      <ul class="nav-links">
+    <nav>
+      <h1>Bukidnon</h1>
+      <ul class="menu">
         <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#">Spots</a></li>
+        <li><a href="#">About</a></li>
         <li><a href="#">Gallery</a></li>
       </ul>
     </nav>
-    <!-- End of Navbar -->
 
-    <!-- Hero -->
-    <header class="hero">
-      <div class="overlay"></div>
-      <div class="hero-text">
-        <h1 class="hero-title">Bukidnon</h1>
-        <p class="hero-subtitle">The Highland Paradise</p>
-      </div>
-    </header>
-
-    <!-- End of Hero -->
-
-    <!-- About -->
-
-    <section id="about" class="about">
-      <div class="about-image">
-        <img
-          src="https://via.placeholder.com/600x400"
-          alt="Bukidnon Landscape"
-        />
-      </div>
-      <div class="about-text">
-        <h2>About Bukidnon</h2>
-        <p
-          >Bukidnon, often referred to as the 'Highland Paradise,' is a
-          landlocked province in the heart of the island of Mindanao in the
-          Philippines. Known for its stunning landscapes, Bukidnon is a haven
-          for nature lovers and adventure seekers. With its picturesque rolling
-          hills, verdant pine forests, and rich biodiversity, the province
-          offers visitors a refreshing escape from the hustle and bustle of city
-          life. Bukidnon is home to the indigenous Bukidnon people, who have a
-          rich history and vibrant culture deeply rooted in the land. The
-          province boasts a range of unique tourist attractions, including the
-          famous Del Monte pineapple plantation, the breathtaking Dahilayan
-          Adventure Park, and the mesmerizing Monastery of Transfiguration. No
-          matter what type of traveler you are, Bukidnon has something for
-          everyone to explore and enjoy.
-        </p></div
-      >
-    </section>
-
-    <!-- End of About -->
-
-    <!-- Spots -->
-
-    <section class="tourist-spots">
-      <h2>Tourist Spots</h2>
-
-      <div class="spot">
-        <div class="spot-image">
-          <img
-            src="https://via.placeholder.com/500x350"
-            alt="Mountain Landscape"
-          />
-        </div>
-        <div class="spot-text">
-          <h3>Mountain Title</h3>
-          <p
-            >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-            lacinia odio vitae vestibulum vestibulum. Cras...</p
-          >
-        </div>
-      </div>
-
-      <div class="spot">
-        <div class="spot-image">
-          <img
-            src="https://via.placeholder.com/500x350"
-            alt="Mountain Landscape"
-          />
-        </div>
-        <div class="spot-text">
-          <h3>Mountain Title</h3>
-          <p
-            >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-            lacinia odio vitae vestibulum vestibulum. Cras...</p
-          >
-        </div>
-      </div>
-
-      <div class="spot">
-        <div class="spot-image">
-          <img
-            src="https://via.placeholder.com/500x350"
-            alt="Mountain Landscape"
-          />
-        </div>
-        <div class="spot-text">
-          <h3>Mountain Title</h3>
-          <p
-            >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-            lacinia odio vitae vestibulum vestibulum. Cras...</p
-          >
-        </div>
+    <!-- Hero section -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Bukidnon</h1>
+        <p>The Highland Paradise</p>
       </div>
     </section>
 
-    <!-- End of Spots -->
+    <!-- Content goes here -->
   </body>
 </html>
